--- a/fb/fancybox/jquery.fancybox-1.3.4.css
+++ b/fb/fancybox/jquery.fancybox-1.3.4.css
@@ -39,10 +39,11 @@
 }
 
 #fancybox-overlay {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
+    bottom: 0;
+    right: 0;
 	z-index: 1100;
 	display: none;
 }
