--- a/about/css/style.css
+++ b/about/css/style.css
@@ -58,15 +58,10 @@ body {
 }
 
 .info {
-    text-align: left;
     line-height: 1.3;
     padding: 10px 40px;
     position: relative;
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    transform: rotateY(180deg);
+    font-size: 13px;
 }
 
 .info a {
@@ -158,14 +153,9 @@ body {
 
 .grid-block.hover {
     -webkit-transform: rotateY(-180deg);
-    /*-webkit-transform-origin: 0px;*/
     -moz-transform: rotateY(-180deg);
-    /*-moz-transform-origin: 0px;*/
     -ms-transform: rotateY(-180deg);
-    /*-ms-transform-origin: 0px;*/
     -o-transform: rotateY(-180deg);
-    /*-o-transform-origin: 0px;*/
-    /*right: -420px;*/
 }
 
 .grid-block.hover .grid-block-badge {
@@ -175,6 +165,10 @@ body {
 
 .grid-block.hover .grid-block-inner {
     top: -240px;
+    -webkit-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
 }
 
 .page {
@@ -201,7 +195,7 @@ body {
 }
 
 #nav {
-    width: 960px;
+    width: 850px;
     margin: 0 auto;
     text-align: center;
     margin-top: 40px;
@@ -233,13 +227,12 @@ body {
     display: inline-block;
     position: relative;
     left: -300px;
-    text-transform: lowercase;
     -webkit-transition: left 300ms, top 300ms;
     -ms-transition: left 300ms, top 300ms;
     -o-transition: left 300ms, top 300ms;
     -moz-transition: left 300ms, top 300ms;
     opacity: 0;
-    margin: 4px;
+    margin: 4px 1px;
 }
 
 .baseline {
